[Qt] Text spacing miscalculation when using wordSpacing. https://bugs.webkit.org/show_bug.cgi?id=40483

Patch by Ananth Jasty <ext-ananth.jasty@nokia.com> on 2010-06-18
Reviewed by Simon Hausmann.

Removed wordSpacing compensation in FontQt whitespace width
calculation. The QFontMetrics::width() overload that takes
a character does not take QFont's word spacing into account.

* platform/graphics/qt/FontQt.cpp:
(WebCore::Font::floatWidthForComplexText):

Canonical link: https://commits.webkit.org/52455@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61445 268f45cc-cd09-0410-ab3c-d52691b4dbfc